Implement direct de-serialization
